tests/fixtures/valid/slot_assign_binary_expr.torel
unit fixtures.slot_assign_binary_expr;

export proc main() -> Int32 {
    slot answer: Int32 = 40;
    answer = answer + 2;
    answer
}
