tests/fixtures/invalid/assign_to_fix.torel
unit fixtures.assign_to_fix;

export proc main() -> Int32 {
    fix answer: Int32 = 40;
    answer = 42;
    return answer;
}
